# library/src/main/resources/openapi/openapi.yaml
@@ -40,7 +40,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/BookDTO"
+              $ref: "#/components/schemas/BookDTOPost"
       responses:
         '200':
           description: Книга добавлена
@@ -117,8 +117,8 @@ components:
     BookListResponse:
       type: array
       items:
-        $ref: '#/components/schemas/BookDTO'
-    BookDTO:
+        $ref: '#/components/schemas/BookDTOFull'
+    BookDTOWithoutAutors:
       type: object
       required:
         - title
@@ -138,15 +138,29 @@ components:
           minLength: 10
           maxLength: 13
           example: 1617292540
-        authors:
-          type: array
-          items:
-            $ref: '#/components/schemas/AuthorDTO'
         description:
           type: string
           example: lorem ipsum
         imageurl:
-            type: string
-            format: regex
-            pattern: https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)
-            example: http://ya.ru/jpg.jpg
+          type: string
+          format: regex
+          pattern: https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)
+          example: http://ya.ru/jpg.jpg
+    BookDTOFull:
+      allOf:
+        - $ref: '#/components/schemas/BookDTOWithoutAutors'
+      type: object
+      properties:
+        authors:
+          type: array
+          items:
+            $ref: '#/components/schemas/AuthorDTO'
+    BookDTOPost:
+      allOf:
+        - $ref: '#/components/schemas/BookDTOWithoutAutors'
+      type: object
+      properties:
+        authors:
+          type: array
+          items:
+            $ref: '#/components/schemas/IdDTO'
